--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-md bg-body-tertiary py-0 my-1 " id="nav">
+    <nav class="navbar navbar-expand-md bg-body-tertiary py-0 my-1 navb" id="nav">
       <div class="container-fluid">
         <a class="navbar-brand" href="#nav">Home</a>
         <button
@@ -72,18 +72,25 @@
         <span class="mb-3 mb-md-0 text-body-secondary">© 2023 TimeLess Tatse, Inc</span>
       </div>
   
-      <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-        <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
-        <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
-        <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
+      <ul class="nav col-md-3 justify-content-center list-unstyled d-flex">
+        <li class="ms-3"><a class="text-body-secondary" href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a></li>
+        <li class="ms-3"><a class="text-body-secondary" href="https://github.com/"><i class="fa-brands fa-github"></i></a></li>
       </ul>
     </footer>
     <!--script tags  -->
+    <script
+      src="https://kit.fontawesome.com/850ca6a355.js"
+      crossorigin="anonymous"
+    ></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
     <script src="./JS/code.js"></script>
+    <script
+      src="https://kit.fontawesome.com/850ca6a355.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
